# restricted-types

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
demo/: CMakeLists.txt  DivZero.cpp
failures/: AccumulatePriceToTotalPrice.cpp  CMakeLists.txt  CompoundAddition.cpp
fantasy/: 1.using-restrict=default-all-explicit.hpp  2.using-restrict=default-all-explicit-inline-only.hpp  5.using-restrict.hpp  6.using-restrict-attributes.hpp  7.using-restrict-deduction-guides.hpp  using-restrict=default=delete-implicit-static-conversion-implicit-zero-inline-only.hpp  using-restrict=default=delete-implicit-static-conversion-implicit-zero.hpp
future/: 8.cidea.c  8.cidea.fail1.c  8.cidea.fail2.c  8.cidea.fail3.c  8.cidea.fail4.c  8.cidea.fail5.c  8.cidea.fail6.c  CMakeLists.txt
lib/: alias.hpp  enumclass-impl.hpp  enumclass.hpp  mixin-templates.hpp  mixinclass.hpp  normalclass-impl.hpp  normalclass.hpp
test/: CMakeLists.txt  CustomerIdFromUnsignedExplicit.cpp  CustomerIdFromUnsignedNoImplicit.cpp  DecrementAffectsTheCorrectObjects.cpp  IncrementAffectsTheCorrectObjects.cpp  PriceFromLinePriceExplicit.cpp  PriceFromLinePriceNoImplicit.cpp  PriceFromQuantityNoExplicit.cpp  PriceFromQuantityNoImplicit.cpp  SelectiveCompoundAdditionNo.cpp  SelectiveCompoundAdditionYes.cpp  concepts.hpp
